--- a/users/package.json
+++ b/users/package.json
@@ -2,11 +2,17 @@
   "name": "users",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "json-server": "json-server --watch db.json",
+    "dev": "nodemon index.js"
+  },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
+    "json-server": "^0.14.0",
     "lodash": "^4.17.11"
   }
 }
